Saral-OneClick/Saral Manual install/saral_backend_EKS.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saral-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saral-backend
  template:
    metadata:
      labels:
        app: saral-backend
    spec:
      containers:
      - name: saral-backend
        image: jonathanrogers/saral-backend:1.6.2
        ports:
        - containerPort: 3005
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 1000m 
            memory: 1Gi

---
apiVersion: v1
kind: Service
metadata:
    name: saral-backend
    labels:
        app: saral-backend
    annotations:
      alb.ingress.kubernetes.io/target-type: ip
spec:
  type: NodePort
  selector:
    app: saral-backend
  ports:
    - port: 3005
      targetPort: 3005
