Saral-OneClick/Saral Manual install/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saral-backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:058264287513:certificate/d3aca202-2791-4c99-9407-db15f51900e3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: saral-backend
                port:
                  number: 3005
